remove permissions from github workflow

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,10 +8,10 @@ on:
     branches:
       - main
 
-permissions:
-  id-token: write
-  contents: read
-  actions: read
+# permissions:
+#   id-token: write
+#   contents: read
+#   actions: read
 
 jobs:
   deploy:
