add namespace to k8s deploy workflow

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -114,6 +114,7 @@ jobs:
           name: ${{ secrets.CLUSTER_NAME }}
           action: deploy
           strategy: basic
+          namespace: vaultwarden
 
           # private-cluster: true
           manifests: |
