revert pvc change and remove ip middleware

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -119,6 +119,7 @@ jobs:
           # private-cluster: true
           manifests: |
             namespace.yaml
+            pvc.yaml
             secret.yaml
             default-headers.yaml
             ipwhitelist.yaml
